--- a/ongera-project/src/components/footer/Footer.css
+++ b/ongera-project/src/components/footer/Footer.css
@@ -5,7 +5,7 @@
     align-items: center;
     height: 80vh;
     margin-top: 50px ;
-    border-top: 1px black solid;
+    border-top: 1px rgb(215, 210, 210) solid;
     /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 
 
